@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2007-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -11,6 +11,7 @@
 
 
 #include <fost/detail/tagged-string.hpp>
+#include <fost/json-core.hpp>
 
 
 namespace fostlib {
@@ -53,6 +54,10 @@ namespace fostlib {
     template<>
     struct FOST_CORE_DECLSPEC coercer< std::wstring, ascii_string > {
         std::wstring coerce( const ascii_string &s );
+    };
+    template<>
+    struct FOST_CORE_DECLSPEC coercer<json, ascii_string> {
+        json coerce(const ascii_string &s);
     };
 
 
